Adds work samples

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <img src="img/prisma-portrait.jpg" alt="Erik Lopez portrait" class="right portrait">
+            <img src="img/prisma-portrait.jpg" alt="Erik Lopez portrait" class="portrait">
             <p>Hi, my name is Erik. I make web sites.<p>
 
 <p><em>Why does a web designer turned web developer have a basic one-page html site? </em></p>
 
 <p>Good question. I have ideas for a portfolio site. Some cool ones too, but I seem to always want to work on anything else in my free time besides my own web site.</p>
 
-<p>For example, sometimes I like to work on FreeCodeCamp projects, or learn more about JavaScript, maybe read up on modern Front-end Web Development, or just read a good book.</p>
+<p>For example, sometimes I like to work on <a href="https://www.freecodecamp.com/pixelador" target="_blank">freeCodeCamp projects</a>, or learn more about JavaScript, maybe read up on modern Front-end Web Development, or just read a good book.</p>
 
 <p>So this will be a work in progress. Think of this site as a placeholder while something more interesting is brewing.</p>
           </div>
@@ -100,59 +100,56 @@
 
         <div class="row">
           <div class="col-8">
-            <div class="sample"><a href="sample_1.html"><img src="img/samples/screen_ksj_1280x695.png"></a></div></div>
+            <div class="sample"><a href="//www.katiescottjewelry.com" target="_blank"><img src="img/samples/sample_ksjewelry_768x420.jpg"></a></div></div>
           <div class="col-4">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
-              semper.
+            <h3>Katie Scott Jewelry</h3>
+            <h5>Responsibilities</h5>
+              <p>Convert graphic design to functional WordPress theme. Ensure theme is cross-browser compatible and mobile responsive.</p>
+              <a href="//www.katiescottjewelry.com" target="_blank" class="button">Visit Site</a>
           </div>
         </div>
 
         <div class="row">
           <div class="col-8">
-            <div class="sample"><img src="img/samples/screen_ksj_1280x695.png"></div>
-          </div>
+            <div class="sample"><a href="//www.katiescottdesign.com" target="_blank"><img src="img/samples/sample_ksdesign_768x420.jpg"></a></div></div>
           <div class="col-4">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
-              semper.
+            <h3>Katie Scott Design</h3>
+            <h5>Responsibilities</h5>
+              <p>Convert graphic design to functional WordPress theme. Ensure theme is cross-browser compatible and mobile responsive.</p>
+              <a href="//www.katiescottdesign.com" target="_blank" class="button">Visit Site</a>
           </div>
         </div>
 
         <div class="row">
           <div class="col-8">
-            <div class="sample"><img src="img/samples/screen_ksj_1280x695.png"></div>
-          </div>
+            <div class="sample"><a href="//www.jtmeliamoving.com" target="_blank"><img src="img/samples/sample_jtmelia_768x420.jpg"></a></div></div>
           <div class="col-4">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
-              semper.
+            <h3>JT Melia Moving</h3>
+            <h5>Responsibilities</h5>
+            <p>Convert graphic design to functional WordPress theme. Ensure theme is cross-browser compatible and mobile responsive.</p>
+              <a href="//www.jtmeliamoving.com" target="_blank" class="button">Visit Site</a>
           </div>
         </div>
 
         <div class="row">
           <div class="col-8">
-            <div class="sample"><img src="img/samples/screen_ksj_1280x695.png"></div></div>
+            <div class="sample"><a href="//www.phantomlighting.com" target="_blank"><img src="img/samples/sample_phantom_768x420.jpg"></a></div></div>
           <div class="col-4">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
-              semper.
+            <h3>Phantom Lighting</h3>
+            <h5>Responsibilities</h5>
+              <p>Convert graphic design to functional WordPress theme. Ensure theme is cross-browser compatible and mobile responsive.</p>
+              <a href="//www.phantomlighting.com" target="_blank" class="button">Visit Site</a>
           </div>
         </div>
 
         <div class="row">
           <div class="col-8">
-            <div class="sample"><img src="img/samples/screen_ksj_1280x695.png"></div>
-          </div>
+            <div class="sample"><a href="https://www.ledspot.com/ls-commercial-lighting-info/" target="_blank"><img src="img/samples/sample_ledspot_768x420.jpg"></a></div></div>
           <div class="col-4">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
-              semper.
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-8">
-            <div class="sample"><img src="img/samples/screen_ksj_1280x695.png"></div>
-          </div>
-          <div class="col-4">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
-              semper.
+            <h3>LED Spot</h3>
+            <h5>Responsibilities</h5>
+              <p>Convert pre-existing page layout to functional WordPress theme. Ensure theme is cross-browser compatible and mobile responsive.</p>
+              <a href="https://www.ledspot.com/ls-commercial-lighting-info/" target="_blank" class="button">Visit Site</a>
           </div>
         </div>
 
@@ -178,13 +175,11 @@
         <div class="row">
           <div class="col-12">
             
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent et arcu nec turpis
-              suscipit fermentum. Curabitur imperdiet malesuada sem vitae bibendum. Vivamus sed enim ac nunc tristique feugiat
-              a in est. Quisque lobortis, metus ullamcorper vulputate accumsan, lorem velit placerat urna, vel convallis
-              tellus nisi nec libero. Fusce vel metus ornare, dignissim leo id, ultrices neque. Aliquam ut leo id risus bibendum
-              pulvinar feugiat in lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia posuere
-              semper. Mauris ullamcorper commodo cursus. Morbi porttitor ornare magna eget eleifend. Suspendisse lacinia
-              accumsan porttitor. </p>
+            <p>The easiest way to get in touch is to send an email to <strong>Erik at ErikLopez dot work</strong>.</p>
+
+            <p>I can also be reached via LinkedIn.</p>
+            <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/ealopez" data-format="inline" data-related="false"></script>
           </div>
         </div>
       </div>
@@ -213,7 +208,7 @@
               </ul>-->
     <ul class="nav social">
       <li>
-        <a href="https://www.linkedin.com/in/ealopez/" target="_blank" class="twt"><img src="img/twitter-logo.svg" alt="Twitter logo"><span>LinkedIn</span></a>
+        <a href="https://www.linkedin.com/in/ealopez/" target="_blank" class="twt"><img src="img/linkedin-logo.svg" alt="Twitter logo"><span>LinkedIn</span></a>
       </li>
       <li>
         <a href="http://codepen.io/pixelador/" target="_blank" class="git"><img src="img/github-logo.svg" alt="Github logo"><span>Github</span></a>
