Fixes github link, update project list

--- a/index.html
+++ b/index.html
@@ -100,23 +100,12 @@
 
         <div class="row">
           <div class="col-8">
-            <div class="sample"><a href="//www.katiescottjewelry.com" target="_blank"><img src="img/samples/sample_ksjewelry_768x420.jpg"></a></div></div>
+            <div class="sample"><a href="//www.hwcoc.org" target="_blank"><img src="img/samples/sample_hwcoc_768x420.jpg"></a></div></div>
           <div class="col-4">
-            <h3>Katie Scott Jewelry</h3>
+            <h3>Houston West Chamber of Commerce</h3>
             <h5>Responsibilities</h5>
-              <p>Convert graphic design to functional WordPress theme. Ensure theme is cross-browser compatible and mobile responsive.</p>
-              <a href="//www.katiescottjewelry.com" target="_blank" class="button">Visit Site</a>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-8">
-            <div class="sample"><a href="//www.katiescottdesign.com" target="_blank"><img src="img/samples/sample_ksdesign_768x420.jpg"></a></div></div>
-          <div class="col-4">
-            <h3>Katie Scott Design</h3>
-            <h5>Responsibilities</h5>
-              <p>Convert graphic design to functional WordPress theme. Ensure theme is cross-browser compatible and mobile responsive.</p>
-              <a href="//www.katiescottdesign.com" target="_blank" class="button">Visit Site</a>
+              <p>Convert graphic design to functional WordPress theme. Ensure theme is cross-browser compatible and mobile responsive. Integrate ChamberMaster management software product into the new WordPress site.</p>
+              <a href="//www.hwcoc.org" target="_blank" class="button">Visit Site</a>
           </div>
         </div>
 
@@ -211,7 +200,7 @@
         <a href="https://www.linkedin.com/in/ealopez/" target="_blank" class="twt"><img src="img/linkedin-logo.svg" alt="Twitter logo"><span>LinkedIn</span></a>
       </li>
       <li>
-        <a href="http://codepen.io/pixelador/" target="_blank" class="git"><img src="img/github-logo.svg" alt="Github logo"><span>Github</span></a>
+        <a href="http://github.com/pixelador/" target="_blank" class="git"><img src="img/github-logo.svg" alt="Github logo"><span>Github</span></a>
       </li>
       <li>
         <a href="http://codepen.io/pixelador/" target="_blank" class="cpn"><img src="img/codepen-logo.svg" alt="Codepen logo"><span>CodePen</span></a>
